# qlab

./: .gitignore  DESIGN.md  README.md  pyproject.toml  run_alpha_backtest.py  universe.csv
app/: config.py  run_selection.py  stock_picker.py
docs/tutorials/: 01_cross_sectional_momentum.ipynb  02_mean_reversion.ipynb  03_volatility_alphas.ipynb  04_multi_factor_composition.ipynb  05_extension_points.ipynb  06_news_to_signals.ipynb  _gen_01.py  _gen_02.py  _gen_03.py  _gen_04.py  _gen_05.py  _gen_06.py
gui/: run.sh  run_prod.sh
gui/backend/: main.py  models.py
gui/backend/routes/: alphas.py  backtest.py  selection.py  universe.py
gui/backend/services/: alpha_registry.py  backtest_runner.py
gui/frontend/: package-lock.json  package.json  tsconfig.app.json
qlab/: __init__.py
qlab/alphas/: __init__.py  low_volatility.py  mean_reversion.py  momentum.py  quality.py
qlab/backtest/: __init__.py  config.py  costs.py  engine.py
qlab/data/: __init__.py  base.py  cache.py  csv_provider.py  ticker_utils.py  tushare_provider.py  yfinance_provider.py
qlab/features/: __init__.py  cross_section.py  returns.py  rolling.py  volatility.py
qlab/portfolio/: __init__.py  constraints.py  construction.py
qlab/risk/: __init__.py  drawdown.py  metrics.py  regression.py
qlab/utils/: __init__.py  alignment.py  calendar.py  validation.py
tests/: conftest.py  test_alphas.py  test_backtest.py  test_data_validation.py  test_equity_curve.py  test_features.py  test_portfolio.py  test_risk.py  test_stock_picker.py  test_ticker_utils.py  test_utils.py
(+14 files in other folders)
